<resources>
    <string name="app_name">QuizJonathan</string>
    <string name="exit_text">Salir</string>
    <string name="options_text">Mas Opciones</string>
    <string name="finance_text">FINANCIAR</string>
    <string name="value_text">$7.963.420</string>
    <string name="date_text">Mar 15 - 22, 2018</string>
    <string name="earnings_text">Ingresos</string>
    <string name="cash_earnings_text">$1.173.000</string>
    <string name="percentage_earnings_text">+13%</string>
    <string name="cash_expenses_text">$3.747.000</string>
    <string name="expenses_text">Gastos</string>
    <string name="transaction_history_text">Historial de transacciones</string>
    <string name="mercado_libre_text">Mercado Libre</string>
</resources>
