<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.optic.quizjonathangoyesi013214.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/backgroundindex">


            <TextView
                android:id="@+id/textViewFinance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finance_text"
                android:textColor="@color/colorGray"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>


            <TextView
                android:id="@+id/textViewCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_text"
                android:layout_centerInParent="true"
                android:textColor="@color/colorGray"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_text"
                android:textColor="@color/colorGray"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_below="@+id/textViewCash"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >

                <TextView
                    android:id="@+id/textViewEarnings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:layout_marginTop="2dp"
                    android:layout_alignLeft="@+id/textViewCashEarnings"
                    android:text="@string/earnings_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percentage_earnings_text"
                    android:textSize="11sp"
                    android:paddingRight="3dp"
                    android:paddingLeft="3dp"
                    android:paddingTop="1dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorGray"
                    android:background="@drawable/percentage_border2"
                    android:layout_alignRight="@+id/textViewCashEarnings"
                    />

                <TextView
                    android:id="@+id/textViewCashEarnings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_earnings_text"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/textViewEarnings"
                    />

            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorGrayText"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                >

                <TextView
                    android:id="@+id/textViewExpenses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:layout_marginTop="2dp"
                    android:layout_alignLeft="@+id/textViewCashExpenses"
                    android:text="Gastos"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-37%"
                    android:textSize="11sp"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="1dp"
                    android:textStyle="bold"
                    android:paddingBottom="1dp"
                    android:textColor="@color/colorGray"
                    android:background="@drawable/percentage_border"
                    android:layout_alignRight="@+id/textViewCashExpenses"
                    />

                <TextView
                    android:id="@+id/textViewCashExpenses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_expenses_text"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/textViewExpenses"
                    />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:background="@color/colorGray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorGrayText"
                android:text="@string/transaction_history_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mas"
                android:textColor="@color/colorGrayText"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="2dp"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textViewTitle1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/mercado_libre_text"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10sp"
                            android:layout_below="@+id/textViewTitle1"
                            android:text="15 - 03 - 2018"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-57.30"

                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textViewTitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="Amazon"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10sp"
                            android:layout_below="@+id/textViewTitle2"
                            android:text="15 - 03 - 2018"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+17.30"

                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textViewTitle3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="Evernote"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10sp"
                            android:layout_below="@+id/textViewTitle3"
                            android:text="15 - 03 - 2018"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+317.00"

                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimaryDark"/>

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textViewTitle4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="Evernote"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10sp"
                            android:layout_below="@+id/textViewTitle4"
                            android:text="15 - 03 - 2018"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-1,371.00"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textViewTitle5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="Apple Store"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10sp"
                            android:layout_below="@+id/textViewTitle5"
                            android:text="15 - 03 - 2018"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-500.00"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>


            </LinearLayout>

        </ScrollView>


    </LinearLayout>





</android.support.design.widget.CoordinatorLayout>
